<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="5"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/name"
        android:maxWidth="60dp"
        android:layout_marginLeft="50dp" />

    <TextView
        android:id="@+id/item_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:maxWidth="60dp"
        android:text="@string/author" />

    <TextView
        android:id="@+id/item_publisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:maxWidth="60dp"
        android:text="@string/publisher" />

    <TextView
        android:id="@+id/item_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="50dp"
        android:maxWidth="60dp"
        android:text="@string/year" />

</GridLayout>