<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddBookActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/isbn"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <Button
        android:id="@+id/button_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="queryBook"
        android:text="@string/query"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="28dp"
        android:enabled="false"
        android:onClick="addBook"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
        tools:ignore="UsingOnClickInXml" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/name"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/author"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/author"
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/publisher"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/publisher"
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/year"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/year"
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/price_layout"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/price"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_baseline_settings_24"
        android:onClick="setting"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>